rm blogs dataset file, show output of querying dataset

--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -297,13 +297,14 @@
     "## Querying the dataset\n",
     "The next step is to run a query to search for relevant blogs. The example query searches for `\"model_text\": \"how to track network connections\"` using the model we uploaded to Elasticsearch `sentence-transformers__all-minilm-l6-v2`.\n",
     "\n",
-    "The process is one query even it internally consists of two tasks. One is to transform your search text into a vector using the NLP model and the second task is to run the vector search over the dataset.\n",
-    "\n"
+    "The process is one query even though it internally consists of two tasks. First, the query will generate an vector for your search text using the NLP model and then pass this vector to search over the dataset.\n",
+    "\n",
+    "As a result, the output shows the list of query documents sorted by their proximity to the search query. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -312,7 +313,129 @@
     "id": "c4G5V9wmU9C5",
     "outputId": "c8f0cc24-5713-4560-8a5d-c42da562a670"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>_score</th>\n",
+       "      <th>fields.title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TxUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.591786</td>\n",
+       "      <td>[Brewing in Beats: Track network connections]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SxUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.401099</td>\n",
+       "      <td>[Machine Learning for Nginx Logs - Identifying...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UxUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.390279</td>\n",
+       "      <td>[Data Visualization For Machine Learning]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TBUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.368995</td>\n",
+       "      <td>[Logstash Lines: Introduce integration plugins]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UhUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.368995</td>\n",
+       "      <td>[Logstash Lines: Introduce integration plugins]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>URUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.356903</td>\n",
+       "      <td>[Keeping up with Kibana: This week in Kibana f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>UBUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.341939</td>\n",
+       "      <td>[Kibana 4 Video Tutorials, Part 3]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>VBUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.337294</td>\n",
+       "      <td>[Introducing approximate nearest neighbor sear...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ThUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.336460</td>\n",
+       "      <td>[Where in the World is Elastic? - QCon Beijing...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>TRUU-YkBAHcz2kFqAun2</td>\n",
+       "      <td>0.320756</td>\n",
+       "      <td>[EQL for the masses]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    _id    _score  \\\n",
+       "0  TxUU-YkBAHcz2kFqAun2  0.591786   \n",
+       "1  SxUU-YkBAHcz2kFqAun2  0.401099   \n",
+       "2  UxUU-YkBAHcz2kFqAun2  0.390279   \n",
+       "3  TBUU-YkBAHcz2kFqAun2  0.368995   \n",
+       "4  UhUU-YkBAHcz2kFqAun2  0.368995   \n",
+       "5  URUU-YkBAHcz2kFqAun2  0.356903   \n",
+       "6  UBUU-YkBAHcz2kFqAun2  0.341939   \n",
+       "7  VBUU-YkBAHcz2kFqAun2  0.337294   \n",
+       "8  ThUU-YkBAHcz2kFqAun2  0.336460   \n",
+       "9  TRUU-YkBAHcz2kFqAun2  0.320756   \n",
+       "\n",
+       "                                        fields.title  \n",
+       "0      [Brewing in Beats: Track network connections]  \n",
+       "1  [Machine Learning for Nginx Logs - Identifying...  \n",
+       "2          [Data Visualization For Machine Learning]  \n",
+       "3    [Logstash Lines: Introduce integration plugins]  \n",
+       "4    [Logstash Lines: Introduce integration plugins]  \n",
+       "5  [Keeping up with Kibana: This week in Kibana f...  \n",
+       "6                 [Kibana 4 Video Tutorials, Part 3]  \n",
+       "7  [Introducing approximate nearest neighbor sear...  \n",
+       "8  [Where in the World is Elastic? - QCon Beijing...  \n",
+       "9                               [EQL for the masses]  "
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "INDEX_NAME=\"blogs\"\n",
     "\n",
