updates to filter

--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -26,11 +26,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "!pip install elasticsearch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
-        "!pip install elasticsearch\n",
         "from elasticsearch import Elasticsearch\n",
         "import pandas as pd\n",
         "from google.colab import data_table\n",
+        "import getpass\n",
+        "\n",
         "\n",
         "data_table.enable_dataframe_formatter()"
       ]
@@ -48,9 +58,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "cloud_id = '\\u003Ccloud_id>' #@param {type:\"string\"}\n",
-        "elastic_username = 'elastic' #@param {type:\"string\"}\n",
-        "elastic_password = '\\u003Cpassword>' #@param {type: \"string\"}\n",
+        "cloud_id = getpass.getpass('Cloud ID: ')\n",
+        "elastic_username = 'elastic'\n",
+        "elastic_password = getpass.getpass('Password: ') \n",
         "client = Elasticsearch(\n",
         "    cloud_id=cloud_id,\n",
         "    basic_auth=(elastic_username, elastic_password)\n",
