update QA notebook with ElasticsearchStore, update description and title
Add variable to store cloud username

--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -26,12 +26,7 @@
         "id": "GyAst2W-VpHb"
       },
       "source": [
-        "## Install packages and import modules\n",
-        "\n",
-        "To get started, we'll need to connect to our Elastic deployment using the Python client.\n",
-        "Because we're using an Elastic Cloud deployment, we'll use the **Cloud ID** to identify our deployment.\n",
-        "\n",
-        "First we need to install the `elasticsearch` Python client."
+        "## Install packages and import modules\n"
       ]
     },
     {
@@ -42,25 +37,19 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -qU langchain jq openai elasticsearch"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "J8-93TiJsNyK"
-      },
-      "outputs": [],
-      "source": [
-        "import json\n",
+        "# install packages\n",
+        "\n",
+        "!python3 -m pip install -qU langchain openai elasticsearch tiktoken\n",
+        "\n",
+        "# import modules\n",
+        "from getpass import getpass\n",
+        "from langchain.vectorstores import ElasticsearchStore\n",
+        "from langchain.embeddings.openai import OpenAIEmbeddings\n",
         "from urllib.request import urlopen\n",
-        "\n",
-        "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/workplace-search/example-data/data.json\"\n",
-        "\n",
-        "response = urlopen(url)\n",
-        "\n",
-        "workplace_docs = json.loads(response.read())\n"
+        "from langchain.text_splitter import CharacterTextSplitter\n",
+        "from langchain.llms import OpenAI\n",
+        "from langchain.chains import RetrievalQA\n",
+        "import json"
       ]
     },
     {
@@ -70,30 +59,66 @@
         "id": "qtEOCsCLWCZp"
       },
       "source": [
-        "## Create Elastic Cloud deployment\n",
+        "## Connect to Elasticsearch\n",
         "\n",
-        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?fromURI=%2Fhome) for a free trial.\n",
+        "ℹ️ We're using an Elastic Cloud deployment of Elasticsearch for this notebook. If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?fromURI=%2Fhome) for a free trial. \n",
         "\n",
-        "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-        "- Select **Create deployment**\n",
+        "We'll use the **Cloud ID** to identify our deployment, because we are using Elastic Cloud deployment. To find the Cloud ID for your deployment, go to https://cloud.elastic.co/deployments and select your deployment.\n",
         "\n",
-        "Now we can instantiate the [Elasticsearch python client](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/index.html), providing the cloud id and password in your deployment."
+        "\n",
+        "We will use [ElasticsearchStore](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html) to connect to our elastic cloud deployment. This would help create and index data easily. In the ElasticsearchStore instance, will set embedding to [OpenAIEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain.embeddings.openai.OpenAIEmbeddings.html) to embed the texts and elasticsearch index name that will be used in this example."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "a-t1mglib54F"
       },
       "outputs": [],
       "source": [
-        "from elasticsearch import Elasticsearch\n",
+        "# set elastic cloud id and password\n",
         "\n",
-        "client = Elasticsearch(\n",
-        "    cloud_id=\"CLOUD_ID\",\n",
-        "    basic_auth=(\"elastic\", \"PASSWORD\")\n",
-        ")\n"
+        "CLOUD_ID = getpass(\"Elastic deployment Cloud ID\")\n",
+        "CLOUD_USERNAME = \"elastic\"\n",
+        "CLOUD_PASSWORD = getpass(\"Elastic deployment Password\")\n",
+        "\n",
+        "# set OpenAI API key\n",
+        "OPENAI_API_KEY = getpass(\"OpenAI API key\")\n",
+        "\n",
+        "# index that we will be using\n",
+        "INDEX_NAME = \"workplace_index\"\n",
+        "\n",
+        "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
+        "\n",
+        "elastic_client = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
+        "            index_name= INDEX_NAME,\n",
+        "            embedding=embeddings\n",
+        "        )\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Download the dataset \n",
+        "\n",
+        "Let's download the sample dataset and deserialize the document."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "J8-93TiJsNyK"
+      },
+      "outputs": [],
+      "source": [
+        "url = \"https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/example-apps/workplace-search/example-data/data.json\"\n",
+        "\n",
+        "response = urlopen(url)\n",
+        "\n",
+        "workplace_docs = json.loads(response.read())\n"
       ]
     },
     {
@@ -109,7 +134,7 @@
         "\n",
         "Here we are chunking documents into 800 token passages with an overlap of 400 tokens.\n",
         "\n",
-        "Here we are using a simple splitter but Langchain offers more advanced splitters to reduce the chace of context being lost."
+        "Here we are using a simple splitter but Langchain offers more advanced splitters to reduce the chance of context being lost."
       ]
     },
     {
@@ -120,10 +145,6 @@
       },
       "outputs": [],
       "source": [
-        "from langchain.embeddings.openai import OpenAIEmbeddings\n",
-        "from langchain.text_splitter import CharacterTextSplitter\n",
-        "from langchain.embeddings import OpenAIEmbeddings\n",
-        "\n",
         "metadata = []\n",
         "content = []\n",
         "\n",
@@ -135,47 +156,7 @@
         "  })\n",
         "\n",
         "text_splitter = CharacterTextSplitter(chunk_size=800, chunk_overlap=400)\n",
-        "docs = text_splitter.create_documents(content, metadatas=metadata)\n",
-        "\n",
-        "embeddings = OpenAIEmbeddings(openai_api_key=\"OPENAI_KEY\")"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kRPxrJnXWfMD"
-      },
-      "source": [
-        "### Setup the Index\n",
-        "Next define the mapping for the passages. Langchain relies on two fields: text and vector."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BfhBEjLsOr0l"
-      },
-      "outputs": [],
-      "source": [
-        "# Define the mapping\n",
-        "mapping = {\n",
-        "    \"mappings\": {\n",
-        "        \"properties\": {\n",
-        "            \"text\": { \"type\": \"keyword\" },\n",
-        "            \"vector\": {\n",
-        "                \"type\": \"dense_vector\",\n",
-        "                \"dims\": 1536,\n",
-        "                \"index\": True,\n",
-        "                \"similarity\": \"cosine\"\n",
-        "            }\n",
-        "        }\n",
-        "    }\n",
-        "}\n",
-        "\n",
-        "# Create the index\n",
-        "client.indices.create(index='workplace_index', body=mapping)"
+        "docs = text_splitter.create_documents(content, metadatas=metadata)"
       ]
     },
     {
@@ -185,39 +166,24 @@
         "id": "RmCUl0hxW4lG"
       },
       "source": [
-        "### Enrich Passages with OpenAI Model\n",
+        "## Index data into elasticsearch\n",
         "\n",
-        "Next we are going to enrich each passage with an embedding from OpenAI."
+        "Now that we have split each document into the chunk size of 500, we will now index data to elasticsearch using [ElasticsearchStore.from_documents](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents).\n",
+        "\n",
+        "We will use Cloud ID,  Password and Index name values set in the `Create cloud deployment` step."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "Qc1LXk-rOzNR"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# get the embeddings from openAI\n",
+        "documents = ElasticsearchStore.from_documents(\n",
+        "    docs, embeddings, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=INDEX_NAME, \n",
+        ")\n",
         "\n",
-        "texts = []\n",
-        "for passage in docs:\n",
-        "  texts.append(passage.page_content)\n",
-        "\n",
-        "textEmbeddings = embeddings.embed_documents(texts)\n",
-        "\n",
-        "# persist the passage documents into elasticsearch\n",
-        "\n",
-        "actions = []\n",
-        "for i, passage in enumerate(docs):\n",
-        "    actions.append({\"index\": {\"_index\": \"workplace_index\"}})\n",
-        "    actions.append({\n",
-        "        \"text\": passage.page_content,\n",
-        "        \"vector\": textEmbeddings[i],\n",
-        "        \"metadata\": passage.metadata\n",
-        "    })\n",
-        "\n",
-        "client.bulk(operations=actions)\n"
+        "documents.client.indices.refresh(index=INDEX_NAME)"
       ]
     },
     {
@@ -233,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -246,37 +212,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "---- answer ----\n",
-            " The NASA Sales Team is a regional sales team consisting of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents (Laura Martinez and Gary Johnson). They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction.\n",
-            "---- sources ----\n",
+            "---- Answer ----\n",
+            " The NASA sales team is the North America South America regional sales team, led by the Area Vice-Presidents Laura Martinez and Gary Johnson.\n",
+            "---- Sources ----\n",
+            "Sales Organization Overview\n",
+            "Our sales organization is structured to effectively serve our customers and achieve our business objectives across multiple regions. The organization is divided into the following main regions:\n",
+            "\n",
+            "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
             "Sales Organization Overview\n",
             "Our sales organization is structured to effectively serve our customers and achieve our business objectives across multiple regions. The organization is divided into the following main regions:\n",
             "\n",
             "The Americas: This region includes the United States, Canada, Mexico, as well as Central and South America. The North America South America region (NASA) has two Area Vice-Presidents: Laura Martinez is the Area Vice-President of North America, and Gary Johnson is the Area Vice-President of South America.\n",
             "Sales Organization Overview\n",
             "Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n",
-            "Sales Engineering Collaboration\n",
-            "Title: Working with the Sales Team as an Engineer in a Tech Company\n",
-            "Sales Engineering Collaboration\n",
-            "Introduction:\n",
-            "As an engineer in a tech company, collaboration with the sales team is essential to ensure the success of the company's products and services. This guidance document aims to provide an overview of how engineers can effectively work with the sales team, fostering a positive and productive working environment.\n",
-            "Understanding the Sales Team's Role:\n",
-            "The sales team is responsible for promoting and selling the company's products and services to potential clients. Their role involves establishing relationships with customers, understanding their needs, and ensuring that the offered solutions align with their requirements.\n"
+            "Sales Organization Overview\n",
+            "Each regional sales team consists of dedicated account managers, sales representatives, and support staff, led by their respective Area Vice-Presidents. They are responsible for identifying and pursuing new business opportunities, nurturing existing client relationships, and ensuring customer satisfaction. The teams collaborate closely with other departments, such as marketing, product development, and customer support, to ensure we consistently deliver high-quality products and services to our clients.\n"
           ]
         }
       ],
       "source": [
-        "from langchain.vectorstores.elastic_vector_search import ElasticKnnSearch\n",
-        "from langchain.llms import OpenAI\n",
-        "from langchain.chains import RetrievalQA\n",
+        "retriever = elastic_client.as_retriever()\n",
         "\n",
-        "db = ElasticKnnSearch(\n",
-        "    es_connection=client, index_name=\"workplace_index\", embedding=embeddings\n",
-        ")\n",
-        "\n",
-        "retriever = db.as_retriever()\n",
-        "\n",
-        "llm = OpenAI(openai_api_key=\"OPENAI_KEY\")\n",
+        "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
         "\n",
         "qa = RetrievalQA.from_chain_type(\n",
         "    llm=llm,\n",
@@ -287,38 +244,12 @@
         "\n",
         "ans = qa({\"query\": \"what is the nasa sales team?\"})\n",
         "\n",
-        "print(\"---- answer ----\")\n",
+        "print(\"---- Answer ----\")\n",
         "print(ans[\"result\"])\n",
-        "print(\"---- sources ----\")\n",
+        "print(\"---- Sources ----\")\n",
         "for doc in ans[\"source_documents\"]:\n",
         "  print(doc.metadata[\"name\"])\n",
         "  print(doc.page_content)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SOeP4-DLnwDB",
-        "outputId": "acff2056-eec6-46e5-cddc-9af9050c046e"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "ObjectApiResponse({'acknowledged': True})"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "client.indices.delete(index=\"workplace_index\")"
       ]
     }
   ],
@@ -327,13 +258,28 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.11.3 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.4"
     },
-    "orig_nbformat": 4
+    "orig_nbformat": 4,
+    "vscode": {
+      "interpreter": {
+        "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
