rename elasticsearchStore variable name, remove manual refresh

--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "a-t1mglib54F"
       },
@@ -91,7 +91,7 @@
         "\n",
         "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
         "\n",
-        "elastic_client = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
+        "vector_store = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
         "            index_name= INDEX_NAME,\n",
         "            embedding=embeddings\n",
         "        )\n"
@@ -168,7 +168,7 @@
       "source": [
         "## Index data into elasticsearch\n",
         "\n",
-        "Now that we have split each document into the chunk size of 500, we will now index data to elasticsearch using [ElasticsearchStore.from_documents](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents).\n",
+        "Now that we have split each document into the chunk size of 800, we will now index data to elasticsearch using [ElasticsearchStore.from_documents](https://api.python.langchain.com/en/latest/vectorstores/langchain.vectorstores.elasticsearch.ElasticsearchStore.html#langchain.vectorstores.elasticsearch.ElasticsearchStore.from_documents).\n",
         "\n",
         "We will use Cloud ID,  Password and Index name values set in the `Create cloud deployment` step."
       ]
@@ -181,9 +181,7 @@
       "source": [
         "documents = ElasticsearchStore.from_documents(\n",
         "    docs, embeddings, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=INDEX_NAME, \n",
-        ")\n",
-        "\n",
-        "documents.client.indices.refresh(index=INDEX_NAME)"
+        ")"
       ]
     },
     {
@@ -231,7 +229,7 @@
         }
       ],
       "source": [
-        "retriever = elastic_client.as_retriever()\n",
+        "retriever = vector_store.as_retriever()\n",
         "\n",
         "llm = OpenAI(openai_api_key=OPENAI_API_KEY)\n",
         "\n",
