Add index name inline

--- a/notebooks/generative-ai/question-answering.ipynb
+++ b/notebooks/generative-ai/question-answering.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 52,
       "metadata": {
         "id": "a-t1mglib54F"
       },
@@ -86,13 +86,10 @@
         "# set OpenAI API key\n",
         "OPENAI_API_KEY = getpass(\"OpenAI API key\")\n",
         "\n",
-        "# index that we will be using\n",
-        "INDEX_NAME = \"workplace_index\"\n",
-        "\n",
         "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)\n",
         "\n",
         "vector_store = ElasticsearchStore(es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD,\n",
-        "            index_name= INDEX_NAME,\n",
+        "            index_name= \"workplace_index\",\n",
         "            embedding=embeddings\n",
         "        )\n"
       ]
@@ -179,8 +176,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "documents = ElasticsearchStore.from_documents(\n",
-        "    docs, embeddings, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=INDEX_NAME, \n",
+        "documents = vector_store.from_documents(\n",
+        "    docs, embeddings, es_cloud_id=CLOUD_ID, es_user=CLOUD_USERNAME, es_password=CLOUD_PASSWORD, index_name=\"workplace_index\"\n",
         ")"
       ]
     },
